--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<link rel="stylesheet" type="text/css" href="Google.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <body>
     <!--navbar-->
     <div id="google-and-search-flexbox">
