--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <html>
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
-    <!--navbar-->
+    <div id="left-navbar-flexbox">
+  <ul>
+      <strong><li>About⠀Store</li></strong>
+  </ul>
+    </div>
+    <div id="right-navbar-flexbox">
+  <ul> 
+      <strong><li>Gmail⠀Images</li></strong>
+  </ul>
+    </div>
+    
     <div id="google-and-search-flexbox">
     <div class="google-container">
         <div class="google-background" style="background-image: url('https://png.pngtree.com/thumb_back/fw800/back_our/20190619/ourmid/pngtree-winter-snow-background-picture-image_132287.jpg');">
@@ -32,10 +42,14 @@
     <input type="text">
       </div> 
       <img class="magnifying-glass" src="https://www.freeiconspng.com/uploads/magnifying-glass-icon-4.png" alt="Photos Magnifying Glass Icon">
+          <div id="santa-grid">
+            <img class="position-santa" src="images/Santa-Claus-Free-PNG-Image.png">
+          </div>
+          <img class="position-snow" src="https://media1.giphy.com/media/ifdXESe3oSQrU7y0ov/giphy.gif">
       </div><!--search bar container-->
       </div><!--google and search flexbox-->
     <div class="footer">
-    <p></p>
+        <p></p>
     </div>
 </body>
 </html>
