--- a/index.html
+++ b/index.html
@@ -45,9 +45,17 @@
           <div id="santa-grid">
             <img class="position-santa" src="images/Santa-Claus-Free-PNG-Image.png">
           </div>
-          <img class="position-snow" src="https://media1.giphy.com/media/ifdXESe3oSQrU7y0ov/giphy.gif">
+          <div id="snow-grid">
+          <img class="position-snow-left" src="https://media1.giphy.com/media/ifdXESe3oSQrU7y0ov/giphy.gif">
+          <img class="position-snow-right" src="https://media1.giphy.com/media/ifdXESe3oSQrU7y0ov/giphy.gif">
+          </div>
       </div><!--search bar container-->
       </div><!--google and search flexbox-->
+    <div class="footer-container">
+       <div class="left"><p></p></div>
+       <div class="middle"><p></p></div>
+       <div class="right"><p></p></div>
+    </div>    
     <div class="footer">
         <p></p>
     </div>
